# s8_motor_controller

./: CMakeLists.txt  README.md  package.xml
action/: Stop.action
include/: motor_controller_node.h
include/s8_motor_controller/: motor_controller_node.h
src/: motor_controller_node.cpp
